@@ -649,6 +649,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * Added article size limit, $wgMaxArticleSize
 * (bug 4974) Don't follow redirected talk page on "new messages" link
 * (bug 4970) Make category paging limits configurable
+* (bug 4535) Warn user when editing CSS or JS subpage of a skin that doesn't exist
 
 === Caveats ===
 
